--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </h1>
           <p>Frontend Developer & Animator</p>
           <div class="links">
-            <a href="https://br.fiverr.com/joaoalenc?up_rollout=true" target="_blank" class="cv">FIVERR</a>
+            <a href="https://br.fiverr.com/joaoalenc" target="_blank" class="cv">FIVERR</a>
             <a href="https://github.com/jcalencar" target="_blank">GITHUB</a>
           </div>
         </div>
